# boot-rust

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  README.md  all_code_spex_core.txt  all_code_spex_rust.txt  build.rs  concat_files.py  create  plugin.toml
.cargo/: config.toml
prompts/: Makefile  base_instructions.txt  language_rules.txt  review_instructions.txt
proto/: plugin.proto
scripts/: create_release_zip.sh
src/: llm_client.rs  main.rs  project_builder.rs  prompt_builder.rs  server.rs  spec.rs
templates/rust/: .gitignore.template  Cargo.toml.template  Makefile.template  README.md.template  main.rs.template
templates/rust/instructions/: rust_rules.tera
templates/rust/patterns/: cli_patterns.tera
templates/rust/prompt_templates/: generation.tera  review.tera
