### FILE: Cargo.toml
[package]
name = "boot-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boot-rust"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

# gRPC and Protobuf
tonic = "0.11"
prost = "0.12"

# Serialization/Deserialization for spec.toml
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error Handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"
